[tool.poetry]
name = "k8s_demo"
version = "0.1.0"
description = ""
authors = ["m_khandaker <m_khandaker@eaglys.co.jp>"]

[tool.poetry.dependencies]
python = "3.10.8"
fastapi = "0.86.0"
uvicorn = "0.19.0"
pydantic = "1.8.2"
jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "~7"
pytest-cov = "4.0.0"
black = "22.3.0"
isort = "5.10.1"
flake8 = "5.0.4"
bandit = "1.7.4"
safety = "2.3.1"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
format = "app:code_format"
start = "app:start_server"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=k8s_demo --cov-report=term-missing"
testpaths = [
    "tests"
]